# clash-stats

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  aliases.sh  crontab  data  docker-compose.yml  entrypoint.sh  publish_stats.sh  pyproject.toml
.github/workflows/: ci.yml
docker/browser/: Dockerfile  entrypoint.sh
docker/monitoring/: alloy-config.alloy  prometheus.yml
docker/samv2/: Dockerfile  server.py  start.py
docker/scraper-vpn/: control-auth.toml
docs/: architecture.md  ml-empirical-findings.md  ml-feature-engineering.md  ml-pipeline-overview.md  ml-similarity-tilt.md  ml-tcn-architecture.md  ml-umap-clustering.md  ml-win-probability.md  observability.md  research-notes.md
docs/adr/: 001-feature-engineering.md  002-monte-carlo-simulation.md  003-game-state-embeddings.md  004-win-probability-estimator.md  005-opponent-prediction.md  006-counterfactual-simulator.md  007-training-data-pipeline.md  008-observability.md  009-visual-game-state-recognition.md  README.md
scripts/: analyze_refined_labels.py  backfill_deck_cards.py  export_cvae_dataset.py  migrate_mariadb_to_pg.py  migrate_to_mariadb.py  pg_post_migration.sql  pgloader-docker.conf  pgloader.conf  refine_with_claude_code.sh  run_refine.sh  train_cvae_cloud.py  visualize_tracking.py
src/tracker/: __init__.py  __main__.py  analytics.py  api.py  archetypes.py  cli.py  corpus.py  corpus_scraper.py  cr_tracker.py  dashboard.py  database.py  dimensions.py  export.py  metrics.py  models.py  replay_http.py  replays.py  reporting.py  temporal_analysis.py  test_cr_tracker.py
src/tracker/alembic/: env.py
src/tracker/experiments/: __init__.py  classic_1v1.py
src/tracker/ml/: __init__.py  activity_model.py  calibration.py  card_metadata.py  cluster_profiler.py  clustering.py  counterfactual.py  cvae.py  cvae_dataset.py  cvae_storage.py  cvae_training.py  deck_embedding.py  features.py  lazy_dataset.py  model_registry.py  pilot_fingerprint.py  sequence_dataset.py  similarity.py  storage.py  tcn.py  tilt_detector.py  training.py  umap_embeddings.py  wp_dataset.py  (+3 more)
stats/: matchups.json  overview.json  recent.json  streaks.json  trophy-history.json
tests/: test_samv2_tracking.py
(+58 files in other folders)
