[project]
name = "clash-stats"
version = "0.2.0"
description = "Clash Royale analytics suite — battle tracker and historical analysis"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
]

[project.scripts]
clash-stats = "tracker.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["src"]
python_files = ["test_*.py"]
