[project]
name = "clash-stats"
version = "0.2.0"
description = "Clash Royale analytics suite — battle tracker and historical analysis"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "flask>=3.0",
    "playwright>=1.50",
    "beautifulsoup4>=4.12",
    "tenacity>=9.0",
    "circuitbreaker>=2.0",
    "prometheus-client>=0.20",
]

[project.scripts]
clash-stats = "tracker.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tracker = ["templates/*.html", "static/*.css", "static/*.js", "alembic/**/*"]

[tool.pytest.ini_options]
testpaths = ["src"]
python_files = ["test_*.py"]
